# rust-gob

./: Cargo.toml
src/de/: mod.rs
src/internal/: gob.rs
src/internal/ser/: serialize_wire_types.rs
src/internal/utils/: buffer.rs  bufvec.rs
src/ser/: output.rs
tests/: de.rs  ser.rs
