[package]
name = "gob"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "serde support for the gob binary format"
license = "MIT"
readme = "README.md"
repository = "https://github.com/srijs/rust-gob"
documentation = "https://docs.rs/gob"

[dependencies]
byteorder = "1.5.0"
bytes = "1.6.1"
iovec = "0.1.4"
lazy_static = "1.5.0"
owning_ref = "0.4.1"
safemem = "0.3.3"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_schema = { version = "0.0.1", git = "https://github.com/hwkim1127/rust-serde-schema.git", features = ["bytes"], branch = "master"}
serde_schema_derive = { version = "0.0.1", git = "https://github.com/hwkim1127/rust-serde-schema.git", branch = "master"}

[dev-dependencies]
bencher = "0.1.5"
serde_bytes = "0.11.15"
partial-io = { version = "0.5.4", features = ["quickcheck"] }
quickcheck = "1.0.3"

[[bench]]
name = "serialize"
harness = false
